--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="box-item">
         <h3>О себе</h3>
         <p>
-          Начинающий веб-программист, знающий такие технологии как HTML, CSS,
+          Веб-программист с опытом разработки веб-приложений, знающий такие технологии как HTML, CSS,
           JavaScript, PHP, имеющий высшее техническое образование в
           области информационных технологии.
         </p>
@@ -99,6 +99,7 @@
       <div class="box-skills">
         <img class="img-box" src="assets/html-5.png" alt="html-5" />
         <img class="img-box" src="assets/css-3.png" alt="css-3" />
+        <img class="img-box" src="assets/js.png" alt="javascript" />
       </div>
     </div>
     <!--END Второй блок с описанием и технологиями-->
